@@ -1,0 +1,47 @@
+<tal:block tal:define="isDiscussionAllowed view/is_discussion_allowed"
+           tal:condition="isDiscussionAllowed"
+           i18n:domain="plone">
+<tal:block define="userHasReplyPermission view/can_reply;
+                   isAnonymousDiscussionAllowed view/anonymous_discussion_allowed;
+                   isAnon view/is_anonymous;
+                   canReview view/can_review;
+                   replies python:view.get_replies(workflow_actions=1);
+                   has_replies python:view.has_replies(canReview);
+                   showCommenterImage view/show_commenter_image;
+                   errors options/state/getErrors|nothing;
+                   wtool context/@@plone_tools/workflow;">
+    <div class="reply"
+         tal:condition="python:isAnon and not isAnonymousDiscussionAllowed">
+        <form tal:attributes="action view/login_action">
+            <input class="standalone"
+                   style="margin-bottom: 1.25em;"
+                   type="submit"
+                   value="Log in to add comments"
+                   i18n:attributes="value label_login_to_add_comments;"
+                   />
+        </form>
+    </div>
+
+    <div class="discussion"
+         tal:attributes="class python: showCommenterImage and 'discussion showCommenterImage' or 'discussion';"
+         tal:condition="has_replies">
+        <tal:getreplies repeat="reply_dict replies">
+            <metal:reply use-macro="view/comment/macros/comment" />
+        </tal:getreplies>
+    </div>
+
+    <div class="reply"
+         tal:condition="python:has_replies and (isAnon and not isAnonymousDiscussionAllowed)">
+        <form tal:attributes="action view/login_action">
+            <input class="standalone"
+                   style="margin-bottom: 1.25em;"
+                   type="submit"
+                   value="Log in to add comments"
+                   i18n:attributes="value label_login_to_add_comments;"
+                   />
+        </form>
+    </div>
+
+
+</tal:block>
+</tal:block>
